--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,6 @@ h3{
   font-weight: 600;
   text-transform: uppercase;
   display: inline;
-  margin-right:5rem;
   line-height: 1.5rem;
 }
 
